--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <style>canvas {width: 100%, height: 100%}</style>
   </head>
   <script type="text/javascript" src="http://threejs.org/build/three.min.js"></script>
+  <script type="text/javascript" src="TrackballControls.js"></script>
   <script type="text/javascript" src="Graph.js"></script>
   <script type="text/javascript" src="main.js"></script>
   <body onload="main()">
