--- a/index_json.html
+++ b/index_json.html
@@ -3,7 +3,7 @@
   <head>
     <title>Graph3d</title>
 
-    <style>canvas{width: 100%, height: 100%}</style>
+    <!-- <style>canvas{width: 100%, height: 100%}</style> -->
 
     <script type="text/javascript" src="http://threejs.org/build/three.min.js"></script>
     <script type="text/javascript" src="TrackballControls.js"></script>
@@ -14,7 +14,8 @@
     <script type="text/javascript">
       var scene    = new THREE.Scene();
       var cam      = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-      var renderer = new THREE.WebGLRenderer({alpha: true});
+      var main_canvas = document.getElementById("main_canvas");
+      var renderer = new THREE.WebGLRenderer({canvas:main_canvas, alpha: true});
       renderer.setSize(window.innerWidth, window.innerHeight);
 
       var controls = new THREE.TrackballControls(cam);
@@ -35,7 +36,8 @@
 
       var tscale = 0.25;
 
-      document.body.appendChild(renderer.domElement);
+      // document.body.appendChild(renderer.domElement);
+
       animate();
       
 
@@ -131,5 +133,8 @@
     <form>
       <input type="file" id="graph_file" name="graph" onchange="load_graph(this.files)">
     </form>
+
+    <div id="main_canvas">
+    </div>
   </body>
 </html>
